# udae

./: .env.example  .gitignore  .mcp.json  README.md  docker-compose.yml  requirements.txt
docs/: AI_INSTALL.md  DATABASE_SCHEMA.md  DOCUMENTATION_SUMMARY.md  DOCUMENTATION_UPDATES.md  LLM_PROVIDER_CONFIG.md  PROJECT_SETUP_SUMMARY.md  PROJECT_STATUS.md  QUICKSTART.md  SETUP_GUIDE_COMPLETE.md  TROUBLESHOOTING.md
mcp_server/: __init__.py  __main__.py  server.py
scripts/: check_ingestion_status.py  cleanup.sh  configure_metadata.py  configure_profiler.py  debug_token.py  delete_pipelines.py  get_om_token.py  reset_cube.sh  setup.sh  setup_openmetadata.py  test_stack.sh
semantic_inference/: MIGRATION.md  README.md  __init__.py  __main__.py  config.py  examples.py  inference.py  llm_client.py  om_client.py  prompts.py  pyproject.toml  requirements.txt
semantic_layer/: README.md  __init__.py  __main__.py  config.py  cube_generator.py  llm_inference.py  pipeline.py  relationship_analyzer.py  requirements.txt
tests/: test_server.py
text_to_query/: AUTO_HEALING_EXAMPLES.md  AUTO_HEALING_LIMITS.md  ENHANCED_AUTO_HEALING.md  EXAMPLES.md  FIXED_JOINS_ERROR.md  MIGRATION_TO_QUERY_FIXING.md  QUICKSTART.md  README.md  SCHEMA_HEALING.md  SCHEMA_VALIDATION_COMPLETE.md  SYSTEM_OVERVIEW.md  __init__.py  __main__.py  config.py  cube_metadata.py  query_executor.py  query_fixer.py  query_generator.py  requirements.txt  schema_healer.py  schema_parser.py  schema_validator.py  server.py  start.sh  test_healer.py  test_healing_scenarios.py
text_to_query/api/: routes.py
(+3 files in other folders)
