[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "semantic-inference"
version = "2.0.0"
description = "Generate business-friendly metadata for database tables using LLMs"
requires-python = ">=3.8"
dependencies = [
    "httpx>=0.27.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "ruff>=0.1.0",
]

[project.scripts]
semantic-inference = "semantic_inference.__main__:main"
